feat: enhance registration form with submission feedback and additional fields

--- a/src/components/registerForm.scss
+++ b/src/components/registerForm.scss
@@ -40,3 +40,13 @@
         color: red;
     }
 }
+// Form submitted correctly
+.sub-cor {
+    border-radius: 5px;
+    padding: 5px 10px;
+    background-color: lightgreen;
+    ul {
+        line-height: 1.8;
+        list-style: none;
+    }
+}
